alter admin power

--- a/src/views/pixel/index.ejs
+++ b/src/views/pixel/index.ejs
@@ -241,7 +241,16 @@ const handlePixelClick = (e) => {
         //console.log(pixelData.RGB)
         $pixelColorModal.html('').append($pixelInfo(pixelData))
         $("#color-modal").modal('show')
+        enterPress = true
         $("#color-modal").keyup(function (event) {
+          if (enterPress == true) {
+            var keycode = (event.keyCode ? event.keyCode : event.which);
+            if (keycode == '13') {
+              console.log('enter')
+              enterPress = false
+              handleModalConfirm(e)
+            }
+          }
         })
       }
 
