--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -88,6 +88,11 @@ a:hover {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+#navbar-toggler:focus{
+  color: #ebb000;
+  box-shadow: 0 0 0 0.25rem !important;
+}
+
 body{
   padding-top: 70px;
 }
@@ -141,7 +146,7 @@ color: rgb(255, 255, 255);
 
 #pixel-canvas-intro{
   color: rgb(137, 137, 137)!important;
-  width: 830px;
+  max-width: 830px;
 }
 
 .info-spacer{
@@ -280,4 +285,5 @@ width: 50%;
 
 #pixel-wrapper{
   margin-bottom: 100px;
+  overflow-x: auto;
 }
